# rust-ts-sum-types

./: package-lock.json  package.json
backend/: .env  Cargo.toml  create_tables.sql  docker-compose.yml
backend/src/: main.rs
frontend/: index.js  index.ts  package-lock.json  package.json
