[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
sqlx = { version = "0.5.1", features = [ "runtime-async-std-native-tls", "postgres", "macros", "json" ] }
serde = { version = "1.0.59", features = ["derive"] }
serde_json = { version = "1.0.59" }
